--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -4,6 +4,7 @@
 #url: "/" # the base hostname & protocol for your site
 title: "Gipe"
 description: "Gipe"
+baseurl: /gipe25
 url: "https://ai-sf.it/gipe25"
 destination: ../site/
 locale: "it"
