--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: "Gipe"
 description: "Gipe"
-baseurl: /gipe25
-url: "https://ai-sf.it/gipe25"
+# url: "https://ai-sf.it/gipe25"
+url: "https://r3sten.github.io/gipe25"
 destination: ../site/
 locale: "it"
 
