--- a/_data/generic.yml
+++ b/_data/generic.yml
@@ -1,5 +1,5 @@
 title: GIPE
 long_title: 'German Italian Physics Exchange'
-color1: '#ba9dd7'
-color2: '#9b33da'
-color2-light: '#e742da'
+color1: '#b085eb'
+color2: '#8741e8'
+color2-light: '#8741e8'
