--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,44 +1,41 @@
 text: Partners
 
 cards:
-    - size: "small"
-      items:
-        - title: "Physics Department of Trento"
-          site: "http://www.physics.unitn.it/en"
-          img: "img/partners/logodipfisica.jpg"
-        - title: "TIFPA"
-          site: "https://home.infn.it/en/"
-          img: "img/partners/logo_INFN.png"
-        - title: "INFN"
-          site: "https://www.tifpa.infn.it/"
-          img: "img/partners/nuovo-logo-TIFPA.png"
-        - title: "Circoscrizione di Povo"
-          site: "https://www.comune.trento.it/Comune/Organi-politici/Circoscrizioni/Circoscrizione-n.-07-Povo"
-          img: "img/partners/logo-circoscrizione.png"
-        - title: "University of Innsbruck"
-          site: "https://www.uibk.ac.at/index.html.en"
-          img: "img/partners/uniinns.jpg"
-        - title: "Bruno Kessler Foundation"
-          site: "https://www.fbk.eu/it/"
-          img: "img/partners/FBK_BASE.png"
-        - title: "IAPS"
-          site: "https://www.iaps.info/"
-          img: "img/partners/IAPS_LOGO_new.png"
-        - title: "IQOQI"
-          site: "https://www.iqoqi.at/en/"
-          img: "img/partners/LogoIQOQI.png"
-        - title: "Innsbruck Physics Research Center"
-          site: "https://www.uibk.ac.at/sp-physik/"
-          img: "img/partners/innsbruckphys.jpg"
-        - title: "Rotonium"
-          site: "https://www.rotonium.com/"
-          img: "img/partners/rotonium_logo.jpg"
-        - title: "Euregio"
-          site: "https://www.europaregion.info/en/"
-          img: "img/partners/euregio_logo.svg"
-        - title: "Muse"
-          site: "https://www.muse.it/en/"
-          img: "img/partners/muse.png"
-          
-
-          
+  - size: 'small'
+    items:
+      - title: 'Physics Department of Trieste'
+        site: 'https://df.units.it/en'
+        img: 'img/partners/logo_dip_corretto.png'
+      - title: 'INFN'
+        site: 'https://www.ts.infn.it/en/'
+        img: 'img/partners/logo_infn_trieste.png'
+      - title: 'INAF'
+        site: 'https://www.oats.inaf.it/index.php/en/'
+        img: 'img/partners/logo_inaf_corretto.png'
+      - title: 'International Centre for Theoretical Physics'
+        site: 'https://www.ictp.it/'
+        img: 'img/partners/logo_ictp_corretto.png'
+      - title: 'SISSA'
+        site: 'https://www.sissa.it/'
+        img: 'img/partners/logo_sissa_corretto.png'
+      - title: 'CNR'
+        site: 'https://www.cnr.it/en'
+        img: 'img/partners/logo-cnren.png'
+      - title: 'IAPS'
+        site: 'https://www.iaps.info/'
+        img: 'img/partners/IAPS_LOGO_new.png'
+      # - title: 'IQOQI'
+      #   site: 'https://www.iqoqi.at/en/'
+      #   img: 'img/partners/LogoIQOQI.png'
+      # - title: 'Innsbruck Physics Research Center'
+      #   site: 'https://www.uibk.ac.at/sp-physik/'
+      #   img: 'img/partners/innsbruckphys.jpg'
+      # - title: 'Rotonium'
+      #   site: 'https://www.rotonium.com/'
+      #   img: 'img/partners/rotonium_logo.jpg'
+      # - title: 'Euregio'
+      #   site: 'https://www.europaregion.info/en/'
+      #   img: 'img/partners/euregio_logo.svg'
+      # - title: 'Muse'
+      #   site: 'https://www.muse.it/en/'
+      #   img: 'img/partners/muse.png'
