--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -2,73 +2,71 @@ description:
   title: 'General information'
   paragraphs:
     - paragraph:
-        # - line: "Registrations will be open from December 3<sup>rd</sup> at 15:00, GTM+1."
-        - line: 'Registrations are closed.'
+        - line: 'Registrations will be open from July 28<sup>th</sup> at 15:00, GTM+1.'
+        # - line: 'Registrations are closed.'
         # - line: "Registrations are yet to open. Stay tuned for updates!"
     - paragraph:
-        - line: 'You can find the registration form at the bottom of this page.'
+        # - line: 'You can find the registration form at the bottom of this page.'
         - line: 'Please read the terms and conditions below. Please note that, upon registration, you will be asked for personal details (such as name, surname, date of birth, university affiliation, etc.).'
 
 sections:
   - name: 'Selection and requirements'
     info: ''
     points:
-      - text: 'In order to enroll in the event you must be an IAPS member (if you are an AISF member, you are automatically an IAPS member).'
+      - text: 'In order to enroll in the event you must be an AISF or jDPG member.'
       - text: "<b>Note</b>: if you are Italian and you are not an AISF member yet, you can become an AISF member at <a href='https://ai-sf.it/iscrizione/'>this link</a>."
-      - text: "<b>Note</b>: if you are not Italian and you are not an IAPS member, please contact us (<a href='mailto:tiqit@ai-sf.it'>tiqit@ai-sf.it</a>) or your Territorial Committee for your IAPS registration. <a href='https://iaps.info/members/'>Here</a> you can find a list of IAPS Territorial Committees."
-      - text: '<b>Note</b>: if you are an Innsbruck University student, you automatically became an IAPS member.'
-      - text: '40 places are available in total. 8 places are reserved for Innsbruck University students. 7 places are reserved for Trento University students.'
+      - text: "<b>Note</b>: if you are German and you are not an jDPG member, you can become a jDPG member at <a href='https://www.dpg-physik.de/vereinigungen/fachuebergreifend/ak/akjdpg/mitmachen/'>this link</a>."
+      - text: '50 places are available, 40 of them divided in equal parts between jDPG and AISF members. The remaining places are for local students. '
         #- text: "<b>Note</b>: Participation fee is subject to change and will be updated as soon as possible."
         subpoints:
           - text: 'The selected candidates will have to cover a participation fee of 100€.'
-          - text: '15 spots will be assigned to participants who come from the Innsbruck University or the University of Trento, who are exempted from paying a fee (the fee of 50€ is completely covered by the Euregio Mobility Fund).'
-        #  - text: "The final fee might be reduced thanks to some sponsor, but can't be raised. We'll let you know the final price before the event starts."
+          - text: 'Students from University of Trieste have to pay a fee of 50€ (no accomodation included).'
+        #  - text: "The final   fee might be reduced thanks to some sponsor, but can't be raised. We'll let you know the final price before the event starts."
       - text: 'Such fee will cover:'
         subpoints:
-          - text: 'accommodation in Innsbruck and Trento;'
+          - text: 'accommodation in Trieste;'
           - text: lunches and dinners included in the programme above. Thanks to some sponsors we might add other meals to the programme;"
           - text: 'all breakfasts;'
-          - text: 'local transportation in Trento and Innsbruck;'
-          - text: 'train transportation from Innsbruck to Trento;'
-          - text: 'welcome bag with themed gadgets.'
-      - text: 'Participants who need to arrive and sleep in Innsbruck before Sunday 16<sup>th</sup>, and/or to leave from Trento after Saturday 22<sup>nd</sup>, can contact the Organizing Committee, who will help find a suitable accommodation for the extra night(s).'
+          - text: 'local transportation in Trieste;'
+          - text: '(?) welcome bag with themed gadgets.'
+      - text: 'Participants who need to arrive and sleep in Trieste before Tuesday 16<sup>th</sup>, and/or to leave after Saturday 20<sup>nd</sup>, can contact the Organizing Committee, who will help find a suitable accommodation for the extra night(s).'
       - text: 'Please notice that participation fees <b>does not cover</b> the following:'
         subpoints:
-          - text: 'journeys to Innsbruck and from Trento to arrive at the event and leave once it is concluded;'
+          - text: 'journeys to arrive at the event in Trieste and leave once it is concluded;'
           - text: 'lunches and dinners not included in the programm;'
           - text: 'insurance;'
           - text: "everything else not included in: 'such fee will cover'."
-      - text: 'Due to the level of the program, priority will be given to students who have been attending at least the third year of bachelor and who possess a basic knowledge of Quantum Mechanics.'
-      - text: "The selection criteria are presented here.<br> <a class='chip custom1 white-text' href='../files/selection_criteria.pdf' style='font-size: 14px; float: right;'> Selection Criteria </a>"
+      # - text: "(?) Preference will be given to students presenting abstracts for a talk. If you want to present a talk <a href='https://ai-sf.it/iscrizione/'>click here</a> for submit your abstract."
+      # - text: "(?) The selection criteria are presented here.<br> <a class='chip custom1 white-text' href='../files/selection_criteria.pdf' style='font-size: 14px; float: right;'> Selection Criteria </a>"
+      - text: 'A short letter of motivation is also required and may be used to allocate places.'
       - text: 'Please note that unfortunately we are not able to provide scholarships and/or bursaries for any students at this time.'
 
   - name: 'Terms'
     info: 'Please read carefully and take note of the following:'
     points:
       - text: 'All personal data will be handled confidentially and in compliance with the European (GDPR EU 2016/679) and Italian (Art. 13 D. Lgs. 196/2003) data and privacy protection laws.'
-      - text: 'Only students enrolled in a university or similar institution on a physics or physics-related course, as well as up to twelve months after receiving a degree from a university are able to participate in this event. You confirm that you will be at least 18 years of age by December 3<sup>rd</sup>, 2024.'
-      - text: 'You acknowledge and agree that the Organizing Committee, the Italian Association of Physics Students (AISF), the International Association of Physics Students (IAPS), and the hosts of the event have no responsibility whatsoever for injuries, losses, or damages of any kind that result from your participation at the Trento Innsbruck Quantum Information Tour 2025.'
+      - text: 'Only students enrolled in a university or similar institution on a physics or physics-related course, as well as up to twelve months after receiving a degree from a university are able to participate in this event. You confirm that you will be at least 18 years of age by July 28<sup>th</sup> 2025.'
+      - text: 'You acknowledge and agree that the Organizing Committee, the Italian Association of Physics Students (AISF), the International Association of Physics Students (IAPS), and the hosts of the event have no responsibility whatsoever for injuries, losses, or damages of any kind that result from your participation at the German Italian Physics Exchange 2025.'
       - text: "You accept the IAPS Code of Conduct.<br> <a class='chip custom1 white-text' href='../files/IAPS_Code_of_Conduct.pdf' style='font-size: 14px; float: right;'> IAPS Code of Conduct </a>"
       - text: 'By participating in the event you agree to be filmed, photographed, and otherwise recorded during the conference and hereby expressly grant the organizing committee, AISF and IAPS the right to use your picture, movie, or any other form of media publication in contexts such as the internet, social media, brochures, posters, informative and advertising materials. You also confirm that the information contained in this application is true and correct.'
-      - text: "You accept the Information Notice on the Processing of Personal Data.<br> <a class='chip custom1 white-text' href='../files/Liberatoria_TIQIT_partecipanti_EN.pdf' style='font-size: 14px; float: right;'> Information Notice </a>"
+      # - text: "(?) You accept the Information Notice on the Processing of Personal Data.<br> <a class='chip custom1 white-text' href='../files/Liberatoria_TIQIT_partecipanti_EN.pdf' style='font-size: 14px; float: right;'> Information Notice </a>"
       - text: 'You accept that either the Organizing Committee, or the Italian Association of Physics Students (AISF), the International Association of Physics Students (IAPS), the hosts of the event cannot be made responsible for the content of any talk, poster, workshop, excursion or similar activity.'
-      - text: 'You accept that, in case of cancellation by a participant, the Organizing Committee will provide reimbursement only if a replacement for the student can be found. No reimbursement will be given for membership fees under any circumstances. If reimbursement were to be approved, the Organizing Committee would retain a total of 25% of the fee as a contribution to the expenses of the event. No reimbursement will be approved for cancellations presented after January 31<sup>st</sup>.'
+      - text: 'You accept that, in case of cancellation by a participant, the Organizing Committee will provide reimbursement only if a replacement for the student can be found. No reimbursement will be given for membership fees under any circumstances. If reimbursement were to be approved, the Organizing Committee would retain a total of 25% of the fee as a contribution to the expenses of the event.'
       - text: 'The present terms and conditions are governed by the laws of the Republic of Italy.'
 
   - name: 'Deadlines'
     info: ''
     points:
-      - text: 'The round of registration opens on December 3<sup>rd</sup> at 15:00, GTM+1 and closes on December 22<sup>nd</sup> at 23:59, GTM+1.'
+      - text: 'The round of registration opens on July 28<sup>th</sup> at 15:00, GTM+1 and closes on August 10<sup>th</sup> at 23:59, GTM+1.'
       - text: 'Once the registration is closed, the organizing committee will select the participants follpwing the selection criteria presented above.'
       - text: 'Selected participants will be notified within a few days from the registration closing, then the event fee will have to be paid within 7 days to confirm the participation.'
       - text: 'Students non-accepted will be notified as well, and they will have the possibility to participate in case spots are still free after the first payment period.'
-      #- text: "Registrations are yet to open. Stay tuned for updates!"
-
-  # - name: "Registration Form"
-  #   info: ""
-  #   points:
-  #     # - text: "<form><button style='background-color: #04AA6D; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;' formaction='https://bit.ly/applytiqit24' target='_blank'>Apply here</button></form>"
-  #     # - text: "Registrations are closed."
-  #     # - text: "The registration form will be available on December 2<sup>nd</sup> at 21:00, GTM+1."
-  #     # - text: "Apply <a href='https://forms.gle/kb5f6G7NeM3g6hUd9'>here</a>"
-# button: "Registration Form"
+      # - text: 'Registrations are yet to open. Stay tuned for updates!'
+#   - name: 'Registration Form'
+#     info: ''
+#     points:
+#       - text: "<form><button style='background-color: #04AA6D; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;' formaction='https://bit.ly/applytiqit24' target='_blank'>Apply here</button></form>"
+#       - text: 'Registrations are closed.'
+#       - text: 'The registration form will be available on December 2<sup>nd</sup> at 21:00, GTM+1.'
+#       # - text: "Apply <a href='https://forms.gle/kb5f6G7NeM3g6hUd9'>here</a>"
+# button: 'Registration Form'
