--- a/_data/programme.yml
+++ b/_data/programme.yml
@@ -18,44 +18,44 @@ schedule:
     activity:
       - hour: '07:00 - 15:00'
         name: Check-in at the hostel
+        description: <span>There will be someone waiting for you at the train station. In case of necessity dont'esitate to contact us.</span>
         location:
           name: Via Valdirivo, 6, 34132 Trieste TS
           tag: 'hotello'
-        subactivities:
-          - title: <span>In the morning there will be someone waiting for you at the train station.</span>
       - hour: '16:00'
         name: Opening Ceremony
         location:
           name: Via Alfonso Valerio, 2, 34127 Trieste TS
           room: Room A
           tag: 'dip'
-        subactivities:
-          - title: <span>You will receive the keys to your rooms at the Hostello hostel if you didn’t check in before and instructions for the following days. Snacks and drinks are provided.</span>
+        bolddescription: Institutional greetings from University of Trieste and our Sponsors.
+        description: <span>You will receive the keys to your rooms at the Hostello hostel if you didn’t check in before and instructions for the following days. Snacks and drinks are provided.</span>
   - day: Wednesday
     date: 17/09/2025
     activity:
-    #   - hour: '07:00'
-    #     name: Wake up and breakfast
-    #     location:
-    #       name: Youth Hostel Innsbruck, Reichenauer Str. 147, 6020 Innsbruck, Austria
-    #       room: Room TBD
-    #       tag: ''
-    #   - hour: '09:00'
-    #     name: Plenary lecture
-    #     location:
-    #       name: IQOQI
-    #       room: Schrödingersaal
-    #       tag: iqoqi
-    #     subactivities:
-    #       - title: <b>Cooling and Trapping,</b><br><br><a href="http://ultracold.at/grimm/rudi/" target="_blank"><u>Univ.-Prof. Dr. Rudolf Grimm</u></a>, Ultracold Quantum Matter.<b></b>
-    #   - hour: '10:00'
-    #     name: Plenary lecture
-    #     location:
-    #       name: IQOQI
-    #       room: Schrödingersaal
-    #       tag: iqoqi
-    #     subactivities:
-    #       - title: <b>Theory of Exotic Phases in Quantum Gases,</b><br><br><span><a href="https://www.uibk.ac.at/exphys/ultracold-theory/index.html.en" target="_blank">Ass.-Prof. Dr. Russell Bisset</a></span><span>, Ultracold Quantum Matter Theory.</span>
+      - hour: '07:00'
+        name: Wake up and breakfast
+        location:
+          name: Via Valdirivo, 6, 34132 Trieste TS
+          tag: 'hotello'
+      - hour: '09:00'
+        name: City tour
+        location:
+          name: Trieste
+          tag: ''
+      - hour: '15:00'
+        name: Plenary lectures
+        location:
+          name: University of Trieste - Physics Department
+          room: Room A
+          tag: 'dip'
+        # subactivities:
+        #   - title: Titolo
+        #     people:
+        #       name: Nome relatore
+        #     abstract: descrizione
+        description: <span>There will be a coffe break between the lectures.</span>
+    # - title: <b>Titolo,</b><br><br><span><a href="https://google.com" target="_blank">Ass.-Prof. Dr. Nome Professore</a></span><span>, Branca Fisica/Ambito.</span>
     #   - hour: '11:00'
     #     name: Coffee break
     #     location:
@@ -316,99 +316,5 @@ schedule:
       #   location:
       #     name: Ristorante Pizzeria Rosa d'Oro, Piazza Santa Maria Maggiore, 21, 38122 Trento TN, Italia
       #     room: Room TBD
-      #     tag: ''
-      #   subactivities:
-      #     - title: '<a href="https://www.ristoranterosadoro.com/">https://www.ristoranterosadoro.com/</a><br><br>Appetizer: chips<br>Pizza and drink'
-  - day: Sunday
-    date: 21/09/2025
-    activity:
-      # - hour: '07:00'
-      #   name: Wake up and breakfast
-      #   location:
-      #     name: Ostello Trento
-      #     room: Giovane Europa, Via Torre Vanga, 11, 38122 Trento TN, Italia
-      #     tag: ''
-      # - hour: '09:00'
-      #   name: Plenary lecture
-      #   location:
-      #     name: Povo 2
-      #     room: B109
-      #     tag: physunitn
-      #   subactivities:
-      #     - title: <span><b>Quantum Algorithms for Optimization Problems,</b></span><br><span><b><br></b></span><br><a href="https://webapps.unitn.it/du/en/Persona/PER0254993" target="_blank"><u>Alberto Bottarelli</u></a>, Quantum Computing &amp; Quantum Information <span><b></b></span>
-      # - hour: '09:30'
-      #   name: Plenary lecture
-      #   location:
-      #     name: Povo 2
-      #     room: B109
-      #     tag: physunitn
-      #   subactivities:
-      #     - title: <b>Quantum Simulations,</b><br><br><a href="https://webapps.unitn.it/du/en/Persona/PER0207518/Pubblicazioni" target="_blank"><u>Luca Spagnoli</u></a>, Quantum Computing &amp; Quantum Information
-      # - hour: '10:00'
-      #   name: Coffee break
-      #   location:
-      #     name: Povo 2
-      #     room: lobby
-      #     tag: physunitn
-      # - hour: '10:30'
-      #   name: Workshop Q. Computing
-      #   location:
-      #     name: Povo 2
-      #     room: B109
-      #     tag: physunitn
-      #   subactivities:
-      #     - title: <b>Introduction to practical quantum computing with Qiskit,</b><br><b><br></b><br><a href="https://webapps.unitn.it/du/en/Persona/PER0267083/" target="_blank"><u>Matteo Wauters</u></a>, Quantum Computing &amp; Quantum Information <b></b>
-      # - hour: '12:00'
-      #   name: Lunch
-      #   location:
-      #     name: Casa Sociale di Povo
-      #     room: Room TBD
-      #     tag: ''
-      #   subactivities:
-      #     - title: <a href="https://www.pizzario.it/" target="_blank"><u>Pizza Rio</u></a>
-      # - hour: '14:00'
-      #   name: Master presentation
-      #   location:
-      #     name: Povo 2
-      #     room: B112
-      #     tag: physunitn
-      #   subactivities:
-      #     - title: <b><a href="https://webapps.unitn.it/du/en/Persona/PER0212698/">Albino Perego</a></b>
-      # - hour: '14:00'
-      #   name: PhD presentation
-      #   location:
-      #     name: Povo 2
-      #     room: B108
-      #     tag: physunitn
-      #   subactivities:
-      #     - title: "<a href=\"https://webapps.unitn.it/du/en/Persona/PER0198071/Didattica\">Raffaello Potestio</a>\_-\_<span>Coordinator\_</span><span>Doctoral programme</span><br><br><a href=\"https://webapps.unitn.it/du/en/Persona/PER0003921/Didattica\">Giacomo Baldi</a><br><a href=\"https://webapps.unitn.it/du/en/Persona/PER0001700/Curriculum\">Franco Dalfovo</a><br><a href=\"https://webapps.unitn.it/du/en/Persona/PER0003403/Didattica\">William Joseph Weber</a>"
-      # - hour: '15:00'
-      #   name: Poster session
-      #   location:
-      #     name: Povo 2
-      #     room: lobby
-      #     tag: physunitn
-      #   subactivities:
-      #     - title: "<ul><li><b>Luca Spagnoli</b><span>: Quantum Error Correction and Lattice Gauge Theories;</span></li><li><b>Luca Vespucci</b>:\_Quantum Simulation of interacting neutrinos;</li><li><b>Alberto Bottarelli &amp; Gopal Chandrasantra</b>:\_Quantum optimization for industrial applications;</li><li><b>Alex Windey &amp; David Pasqual Solis</b>: Quantum Simulation of the SYK model: from quantum chaos to cosmology.</li><li><b>Yong Kwon</b>: Quantum Computing Software Platform on Integrated Photonic Circuits;</li><li><b>Sebastiano Guaraldo</b>: A quantum photonic integrated SWAP test circuit for entanglement witness and randomness generation;</li><li><b>Marcello Summo</b>: Compact and efficient QKD photonic integrated device;</li><li><b>Alessio Baldazzi</b>: Variational quantum algorithms with integrated entangled photon sources;</li><li><b>Tomasz Zawiślak &amp; Marija Šindik</b>:\_Dipolar supersolids on a ring;</li><li><b>Pietro Oreglia</b>:\_Levitated quantum systems;</li><li><b>Chiara Rogora &amp; Diego Andreoni</b>:\_Superfluid spin mixtures;</li><li><b>Sukla Pal</b>: Open quantum systems, chain of strongly dissipative bosons.</li></ul>"
-      # - hour: '17:30'
-      #   name: Clorsing Ceremony
-      #   location:
-      #     name: Museo Castello del Buonconsiglio, Via Bernardo Clesio, 5, 38122 Trento TN, Italia
-      #     room: Room TBD
-      #     tag: ''
-      #   subactivities:
-      #     - title: "Nicola Pretto - AISF Trento President<br><a href=\"https://webapps.unitn.it/du/en/Persona/PER0174693/Curriculum\" target=\"_blank\"><u>Gianluca Lattanzi</u></a>\_- Department of Physics Director"
-      # - hour: '18:30'
-      #   name: Dinner
-      #   location:
-      #     name: Museo Castello del Buonconsiglio, Via Bernardo Clesio, 5, 38122 Trento TN, Italia
-      #     room: Room TBD
-      #     tag: ''
-      # - hour: '20:00'
-      #   name: Guided tour
-      #   location:
-      #     name: Museo Castello del Buonconsiglio, Via Bernardo Clesio, 5, 38122 Trento TN, Italia
-      #     room: Room TBD
-      #     tag: ''
 button1: Download PDF (available soon)
 button2: Add to Google Calendar
