--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,9 +8,9 @@ who:
     - text: '20 students from other italian universities'
     - text: '20 students from german universities'
 
-when: 'From Tuesday 16th September to Saturday 20th February 2025'
+when: 'From Tuesday 16th September to Saturday 20th September 2025'
 
-where: 'Some of the most advanced research facilties into the city of Trieste'
+where: 'In some of the most advanced research facilties into the city of Trieste'
 
 slideshow1:
   - img: img/landscapes/trieste1_v2.jpg
