--- a/_data/facilities.yml
+++ b/_data/facilities.yml
@@ -39,12 +39,12 @@ cards:
   - name: 'Accommodation'
     zoom: true
     items:
-      - img: img/accomodation/Hotello.webp
-        title: Hotello
-        tag: 'hotello'
-        descr: 'Accommodation in Trieste will be provided at the Hotello hostel, Via Valdirivo 6, 34142 Trieste TS'
-        site: 'https://www.hotello.space/'
-        map: 'https://www.google.com/maps/place//data=!4m2!3m1!1s0x477b6b6e6f0ee41b:0xc174f00b3e3c5df1?sa=X&ved=1t:8290&ictx=111'
+      - img: img/accomodation/controvento.jpg
+        title: ControVento Hostel
+        tag: 'hotel'
+        descr: 'Accommodation in Trieste will be provided at the ControVento Hostel, Piazza Venezia, 1, 34123 Trieste TS'
+        site: 'https://www.controventohostel.com/en/'
+        map: 'https://www.google.com/maps/place//data=!4m2!3m1!1s0x477b6b79d12e3efb:0xe6c64728e0f26dfb?sa=X&ved=1t:8290&ictx=111'
       # - img: img/facilities/youth_hostel_innsbruck.jpg
       #   title: Youth Hostel Innsbruck
       #   tag: 'hotel_innsbruck'
