--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -6,9 +6,9 @@ cards:
       - title: 'Physics Department of Trieste'
         site: 'https://df.units.it/en'
         img: 'img/partners/logo_dip_corretto.png'
-      - title: 'INFN'
-        site: 'https://www.ts.infn.it/en/'
-        img: 'img/partners/logo_infn_trieste.png'
+      # - title: 'INFN'
+      #   site: 'https://www.ts.infn.it/en/'
+      #   img: 'img/partners/logo_infn_trieste.png'
       - title: 'INAF'
         site: 'https://www.oats.inaf.it/index.php/en/'
         img: 'img/partners/logo_inaf_corretto.png'
