--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -4,8 +4,8 @@
 #url: "/" # the base hostname & protocol for your site
 title: "Gipe"
 description: "Gipe"
-# url: "https://ai-sf.it/gipe25"
-url: "https://r3sten.github.io/gipe25"
+url: "https://ai-sf.it/gipe"
+# url: "https://r3sten.github.io/gipe25"
 destination: ../site/
 locale: "it"
 
