registration page error corrected

--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -28,7 +28,7 @@ sections:
           - text: lunches and dinners included in the programme above. Thanks to some sponsors we might add other meals to the programme;"
           - text: 'all breakfasts;'
           - text: 'local transportation in Trieste;'
-          - text: '(?) welcome bag with themed gadgets.'
+          - text: 'welcome bag with themed gadgets.'
       - text: 'Participants who need to arrive and sleep in Trieste before Tuesday 16<sup>th</sup>, and/or to leave after Saturday 20<sup>nd</sup>, can contact the Organizing Committee, who will help find a suitable accommodation for the extra night(s).'
       - text: 'Please notice that participation fees <b>does not cover</b> the following:'
         subpoints:
