--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -26,10 +26,10 @@ creator:
   #- name: Roberto Ciccarelli
   #  mail: roberto.ciccarelli@ai-sf.it
   - name: Denis Cristian Pal
-    mail: deniscristian.pal@studenti.units.it
-    # link: https://github.com/R3sten
-  # - name: Giorgio Micaglio
-  #   link: https://github.com/giorgiomi
+    # mail: deniscristian.pal@studenti.units.it
+    link: https://github.com/R3sten
+  - name: Giorgio Micaglio
+    link: https://github.com/giorgiomi
 
 images:
   - link: 'img/organizers/aisf_logo.png'
