--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -11,7 +11,7 @@ contact:
 
 connect:
   - name: GIPE25
-    url: https://instagram.com/gipe.25/
+    url: https://instagram.com/gipe2025/
     img: 'img/ig_logo3.png'
   - name: AISF Trieste
     url: https://instagram.com/aisftrieste/
