--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -6,7 +6,7 @@ cards:
     items:
       - title: 'Physics Department of Trieste'
         site: 'https://df.units.it/en'
-        img: 'img/partners/logo_dip_corretto.png'
+        img: 'img/partners/image002.png'
       # - title: 'INFN'
       #   site: 'https://www.ts.infn.it/en/'
       #   img: 'img/partners/logo_infn_trieste.png'
@@ -18,16 +18,17 @@ cards:
         img: 'img/partners/logo_ictp_corretto.png'
       - title: 'SISSA'
         site: 'https://www.sissa.it/'
-        img: 'img/partners/logo_sissa_corretto.png'
-      - title: 'CNR'
-        site: 'https://www.cnr.it/en'
-        img: 'img/partners/logo-cnren.png'
+        img: 'img/partners/sissa-logo.jpg'
+      # - title: 'CNR'
+      #   site: 'https://www.cnr.it/en'
+      #   img: 'img/partners/logo-cnren.png'
+      - title: 'Elettra Sincrotrone Trieste'
+        site: 'https://www.elettra.eu/'
+        img: 'img/partners/elettra.png'
       - title: 'IAPS'
         site: 'https://www.iaps.info/'
         img: 'img/partners/IAPS_LOGO_new.png'
-      # - title: 'IQOQI'
-      #   site: 'https://www.iqoqi.at/en/'
-      #   img: 'img/partners/LogoIQOQI.png'
+
       # - title: 'Innsbruck Physics Research Center'
       #   site: 'https://www.uibk.ac.at/sp-physik/'
       #   img: 'img/partners/innsbruckphys.jpg'
