--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -25,7 +25,7 @@ sections:
       - text: 'Such fee will cover:'
         subpoints:
           - text: 'accommodation in Trieste;'
-          - text: lunches and dinners included in the programme above. Thanks to some sponsors we might add other meals to the programme;"
+          - text: 'lunches and dinners included in the programme above. Thanks to some sponsors we might add other meals to the programme;'
           - text: 'all breakfasts;'
           - text: 'local transportation in Trieste;'
           - text: 'welcome bag with themed gadgets.'
