aggiornamenti partners e facilities

--- a/_data/generic.yml
+++ b/_data/generic.yml
@@ -1,5 +1,5 @@
-title: GIPE
-long_title: 'German Italian Physics Exchange'
+title: GIPE25
+long_title: 'German Italian Physics Exchange 2025'
 color1: '#b085eb'
 color2: '#8741e8'
 color2-light: '#8741e8'
