--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,11 +1,12 @@
-- text: 'Home'
-  url: ''
-- text: 'Registration'
-  url: 'registration'
+# # - text: 'Home'
+# - text: ''
+#   url: ''
 - text: 'Schedule'
-  url: 'programme'
+  url: 'schedule'
 - text: 'Facilities'
   url: 'facilities'
+- text: 'Registration'
+  url: 'registration'
 - text: 'Partners'
   url: 'partners'
 # - text: "Transportation"
