--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,43 +1,72 @@
-text: Partners
 mail: gipe@ai-sf.it
 
 cards:
-  - size: 'small'
+  - name: 'Under the patronage of:'
+    size: 'small'
+    # zoom: true
     items:
+      - title: 'Comune di Trieste'
+        site: 'https://www.comune.trieste.it/'
+        img: 'img/patrocini/comune_di_trieste.png'
+      - title: 'University of Trieste'
+        site: 'https://portale.units.it/en'
+        img: 'img/patrocini/logo_units.png'
+      - title: 'National Research Council'
+        site: 'https://www.cnr.it/en'
+        img: 'img/partners/logo-cnren.png'
+      - title: 'Italian Physics Society'
+        site: 'https://en.sif.it/'
+        img: 'img/patrocini/sif_logo.png'
+
+
+  - name: 'With the support of:'
+    size: 'small'
+    zoom: false
+    items:
+      - title: 'International Association of Physics Students'
+        site: 'https://www.iaps.info/'
+        img: 'img/partners/IAPS_LOGO_new.png'
       - title: 'Physics Department of Trieste'
         site: 'https://df.units.it/en'
         img: 'img/partners/image002.png'
-      # - title: 'INFN'
-      #   site: 'https://www.ts.infn.it/en/'
-      #   img: 'img/partners/logo_infn_trieste.png'
-      - title: 'INAF'
-        site: 'https://www.oats.inaf.it/index.php/en/'
-        img: 'img/partners/logo_inaf_corretto.png'
       - title: 'International Centre for Theoretical Physics'
         site: 'https://www.ictp.it/'
         img: 'img/partners/logo_ictp_corretto.png'
-      - title: 'SISSA'
+      - title: 'National Institute for Astrophysics'
+        site: 'https://www.oats.inaf.it/index.php/en/'
+        img: 'img/partners/logo_inaf_corretto.png'
+      - title: 'National Institute for Nuclear Physics'
+        site: 'https://www.ts.infn.it/en/'
+        img: 'img/partners/logo_infn_trieste.png'
+      - title: 'International School for Advanced Studies'
         site: 'https://www.sissa.it/'
         img: 'img/partners/sissa-logo.jpg'
-      # - title: 'CNR'
-      #   site: 'https://www.cnr.it/en'
-      #   img: 'img/partners/logo-cnren.png'
+
+
+  - name: 'In collaboration with:'
+    size: 'small'
+    zoom: false
+    items:
+      - title: 'AREA Science Park'
+        site: 'https://www.areasciencepark.it/en/'
+        img: 'img/partners/AREA/OIP-840833661.jpg'
       - title: 'Elettra Sincrotrone Trieste'
         site: 'https://www.elettra.eu/'
         img: 'img/partners/elettra.png'
-      - title: 'IAPS'
-        site: 'https://www.iaps.info/'
-        img: 'img/partners/IAPS_LOGO_new.png'
+      # - title: 'PromoTurismoFVG'
+      #   site: 'https://www.promoturismo.fvg.it/'
+      #   img: 'img/partners/PromoTurismoFVG/tfvg-positivo-verticale.svg'
 
-      # - title: 'Innsbruck Physics Research Center'
-      #   site: 'https://www.uibk.ac.at/sp-physik/'
-      #   img: 'img/partners/innsbruckphys.jpg'
-      # - title: 'Rotonium'
-      #   site: 'https://www.rotonium.com/'
-      #   img: 'img/partners/rotonium_logo.jpg'
-      # - title: 'Euregio'
-      #   site: 'https://www.europaregion.info/en/'
-      #   img: 'img/partners/euregio_logo.svg'
-      # - title: 'Muse'
-      #   site: 'https://www.muse.it/en/'
-      #   img: 'img/partners/muse.png'
+
+  - name: 'Official sponsors:'
+    size: 'small'
+    items:
+      # - title: 'European XFEL'
+      #   site: 'https://www.xfel.eu/'
+      #   img: 'img/partners/XFEL/European_XFEL_logo.svg.png'
+      - title: 'National Interuniversity Consortium of Materials Science and Technology'
+        site: 'https://www.instm.it/en/instm.aspx'
+        img: 'img/partners/logo_instm.png'
+      - title: 'RENTAL SUD'
+        site: 'https://www.rentalsudnoleggi.com/'
+        img: 'img/partners/rental.png'
